# avacore

./: .env.example  .gitignore  README.md  pyproject.toml
avacore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
avacore/api/: http_app.py
avacore/channels/telegram/: bot.py
avacore/config/: personality_loader.py  profiles.py  settings.py
avacore/core/: brain.py  decision.py  dto.py  jspace.py  prompts.py
avacore/mail/: imap_client.py  service.py  smtp_client.py
avacore/memory/: auto_memory.py  sqlite_store.py
avacore/model/: ollama_backend.py
avacore/personality/: manager.py  schema.py
avacore/policy/: engine.py  schema.py
avacore/rag/: chunker.py  embedder.py  image_ingest.py  ocr.py  pdf_ingest.py  retriever.py
avacore/system/: ollama_runtime.py
avacore/tools/: browser_control.py  calendar_ics.py  camera_rtsp.py  mystrom.py  notes.py  notes_export.py  rss_fetch.py  speech_to_text.py  weather_fetch.py  web_fetch.py  web_research.py
avacore/vision/: describe.py  smolvlm_client.py
avacore/web/static/: app.js  status.html
data/brain/: MEMORY.md  OPERATING.md  SOUL.md  USER.md
data/personality/: default_personality.json
docs/: JSPACE.md
scripts/: cleanup_camera_cache.py  index_knowledge.py  init_db.py  push_digest.py  run_api.py  run_telegram.py  send_daily_briefing.py  send_daily_mail_digest.py
web/static/: admin.html  app.js  chat.html  review.html  status.html  styles.css
