[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avacore"
version = "0.8.2"
description = "Local personal assistant core for Ava"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  # API / server
  "fastapi>=0.135",
  "uvicorn[standard]>=0.42",
  "pydantic>=2.12",
  "python-dotenv>=1.2",
  "requests>=2.33",
  "httpx>=0.28",
  "psutil>=7.2",

  # Telegram
  "python-telegram-bot>=22.7",

  # Data / storage / config
  "aiosqlite>=0.22",
  "PyYAML>=6.0",

  # RAG / documents
  "numpy>=1.26,<2",
  "faiss-cpu>=1.13",
  "PyMuPDF>=1.27",
  "sentence-transformers>=5.3",
  "scikit-learn>=1.7",

  # Vision / image handling
  "pillow>=12.2",
  "opencv-python-headless==4.10.0.84",

  # Local models / HF
  "torch>=2.11",
  "transformers>=4.50",
  "accelerate>=1.13",
  "safetensors>=0.7",

  # Web / research / feeds
  "beautifulsoup4>=4.14",
  "feedparser>=6.0",
  "playwright>=1.59",

  # Calendar / briefing
  "icalendar>=7.1",
  "recurring-ical-events>=3.8",
  "python-dateutil>=2.9",
  "tzdata>=2026.2",

  # Voice / speech-to-text
  "faster-whisper>=1.2",
  "av>=17.0",

  # CLI / formatting
  "typer>=0.24",
  "rich>=14.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11"
]

[tool.setuptools.packages.find]
include = ["avacore*"]
exclude = ["data*", "tests*", "scripts*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
